# puffin-finetune-studio

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  make.ps1  pyproject.toml
.claude/skills/puffin/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: llmops-ci.yml  llmops-train.yml  publish.yml
configs/: data.yaml  deploy.yaml  eval.yaml  observability.yaml  train.yaml  train_dpo.yaml  train_grpo.yaml  train_kto.yaml  train_reward.yaml  train_rloo.yaml
copilot/: ARCHITECTURE.md  DEPLOYMENT.md  README.md  TOOLS.md  __init__.py
copilot/backend/: __init__.py  app.py  brief_ops.py  data_authoring.py  data_inspect.py  data_records.py  deploy_ops.py  environment.py  eval_authoring.py  launcher.py  logging.py  logs.py  loop.py  main.py  picker.py  projects.py  scaffold.py  serving_ops.py  settings.py  sse.py  threads.py  train_ops.py  training_studio.py  transforms.py
copilot/backend/providers/: __init__.py  agent_cli.py  anthropic.py  base.py  claude_code.py  codex_cli.py  factory.py  openai_codex.py
copilot/backend/tools/: __init__.py  configs.py  data.py  deploy.py  eval.py  interaction.py  monitor.py  project.py  registry.py  serve.py  (+3 more)
copilot/frontend/: .gitignore  .npmrc  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
copilot/scripts/: dev.ps1  dev.sh
data_contracts/: preference_schema.json  sft_schema.json
dataset_cards/: generated.md  template.md
docs/: architecture.md  dataset_format.md  security_checklist.md
docs/runbooks/: incident_response.md  oncall.md  rollback.md
eval_sets/: golden.jsonl  latency.jsonl  safety.jsonl
infra/accelerate/: deepspeed_z2.yaml  deepspeed_z3.yaml  fsdp.yaml
infra/docker/: .dockerignore  Dockerfile.eval  Dockerfile.serve  Dockerfile.serve.vllm  Dockerfile.train
infra/terraform/: README.md
model_cards/: template.md
pipelines/: argo-train-workflow.yaml  dvc.yaml  vertex_pipeline.py
profiles/: aws_sagemaker.yaml  azure_ml.yaml  gcp_vertex.yaml  kubernetes_vllm.yaml  local.yaml
scripts/: bootstrap_project.ps1  bootstrap_project.sh  copilot_capture.py  create_dataset_version.ps1  create_dataset_version.sh  inspect_cta.py  promote_model.ps1  promote_model.sh  run_local_smoke_test.ps1  run_local_smoke_test.sh  smoke_all_methods.py  verify_validator.py
src/llmops/: __init__.py  cli.py
tests/: conftest.py
tests/copilot/: conftest.py  test_agent_cli_provider.py  test_brief.py  test_codex_cli_provider.py  test_data_authoring.py  test_data_inspect.py  test_data_records.py  test_deploy_endpoints.py  test_environment.py  test_eval_endpoints.py  test_launcher.py  test_loop.py  test_serving_ops.py  test_sse.py  test_threads.py  test_tool_registry.py  test_tools_workflow.py  test_train_ops.py  test_train_studio.py  test_transforms.py
tests/data_quality/: test_dedupe.py  test_ingest_autodiscover.py  test_io_utils.py  test_pipeline_e2e.py  test_redact_pii.py  test_split.py  test_validate.py
tests/evaluation/: test_eval_e2e.py  test_gate.py  test_judges.py  test_metrics_store.py  test_runner_echo.py
tests/fixtures/: example.jsonl
tests/monitoring/: test_drift_monitor.py  test_metrics.py  test_quality_monitor.py
tests/providers/: test_factory.py  test_kubernetes_render.py  test_local.py
tests/security/: test_pii_in_logs.py  test_prompt_injection.py
tests/serving/: test_app.py  test_guardrails.py  test_inference_pipeline.py  test_postprocess.py
tests/training/: test_config_validator.py  test_dpo_knobs.py  test_dpo_validator.py  test_neuron_validator.py  test_training_knobs.py
tests/unit/: test_config.py  test_features.py  test_logging.py  test_versioning.py
(+169 files in other folders)
