[project]
name = "puffin-finetune-studio"
version = "0.1.0"
description = "Cloud-portable LLM fine-tuning template — golden-path repo for SFT/LoRA/DPO with eval gates, registry, monitoring, and provider adapters."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "puffin" }]
readme = "README.md"
keywords = ["llm", "finetune", "lora", "sft", "dpo", "mlops", "llmops", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "pydantic>=2.6,<3",
  "pyyaml>=6.0",
  "python-json-logger>=2.0",
  "typer>=0.12",
  "rich>=13",
  "jsonschema>=4.21",
  "numpy>=1.26",
  "tenacity>=8.2",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
data = [
  "datasets>=2.18",
  "datasketch>=1.6",
  "scikit-learn>=1.4",
  "pandas>=2.2",
]
train = [
  "torch>=2.2",
  "transformers>=4.41",
  "trl>=0.9",
  "peft>=0.10",
  "accelerate>=0.30",
  "datasets>=2.18",
  "mlflow>=2.13",
  "sentencepiece>=0.2",
]
serve = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "prometheus-client>=0.20",
  "transformers>=4.41",
  "torch>=2.2",
]
serve-vllm = [
  "vllm>=0.5; sys_platform != 'win32'",
]
eval = [
  "evaluate>=0.4",
  "rouge-score>=0.1",
  "sentence-transformers>=2.7",
  "scikit-learn>=1.4",
]
gcp = [
  "google-cloud-storage>=2.16",
  "google-cloud-aiplatform>=1.55",
  "google-cloud-secret-manager>=2.20",
]
aws = [
  "boto3>=1.34",
  "sagemaker>=2.221",
]
azure = [
  "azure-storage-blob>=12.20",
  "azure-ai-ml>=1.16",
  "azure-identity>=1.16",
]
k8s = [
  "kubernetes>=29",
]
mlflow = [
  "mlflow>=2.13",
]
copilot = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "anthropic>=0.40",
  "openai>=1.50",
  "claude-agent-sdk>=0.1.0",
  "aiosqlite>=0.20",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",
  "psutil>=5.9",
]
all = [
  "puffin-finetune-studio[data,train,serve,eval,mlflow,copilot]",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML",
  "types-jsonschema",
  "respx>=0.21",
  "freezegun>=1.5",
]

[project.scripts]
puffin = "llmops.cli:app"
puffin-copilot = "copilot.backend.main:main"
finetune-copilot = "copilot.backend.launcher:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmops", "copilot"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["artifacts", "data", "mlruns", "infra/terraform"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
]
ignore = [
  "E501",
  "B008",
  "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "SIM117"]
"src/llmops/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/llmops"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "gpu: marks tests that require a GPU",
  "network: marks tests that require network access",
  "slow: marks slow tests",
  "integration: marks integration tests requiring extras",
]

[tool.coverage.run]
source = ["src/llmops"]
omit = [
  "src/llmops/providers/gcp.py",
  "src/llmops/providers/aws.py",
  "src/llmops/providers/azure.py",
  "src/llmops/providers/kubernetes.py",
  "src/llmops/training/*.py",
  "src/llmops/serving/app.py",
]
